--- a/app/src/main/res/drawable/background_gradiant.xml
+++ b/app/src/main/res/drawable/background_gradiant.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#6660D8"
-        android:endColor="#33a885"
+    <gradient android:startColor="#55a630"
+        android:endColor="#ffba08"
         android:angle="45"
         />
     <corners android:radius="5dp"/>
