--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,8 @@
     <color name="white">#FAFAFA</color>
     <color name="gray">#9C9B9B</color>
     <color name="error">#B00020</color>
-    <color name="gradientStart">#2193b0</color>
-    <color name="gradientEnd">#6dd5ed</color>
+    <color name="gradientStart">#55a630</color>
+    <color name="gradientEnd">#2b9348</color>
     <color name="textColor">#0071cc</color>
     <color name="progressBGColor">#BA000000</color>
 
