--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,20 +7,27 @@
     android:background="@color/white"
     tools:context=".Profile">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:background="@color/gradientEnd"
-        android:orientation="vertical"
-        android:padding="10dp">
-
+        android:layout_height="wrap_content"
+        android:id="@+id/titleLayout"
+        android:background="@color/gradientStart"
+        >
         <ImageView
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:src="@drawable/ic_baseline_chevron_left_24" />
+    </RelativeLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/titleLayout"
+        android:background="@drawable/background_gradiant"
+        android:orientation="vertical"
+        android:padding="10dp">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,7 +46,7 @@
                 android:id="@+id/customer_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="7dp"
+                android:layout_marginStart="2dp"
                 android:paddingTop="20dp"
                 android:text="test"
                 android:textColor="#fff"
@@ -72,13 +79,6 @@
         </LinearLayout>
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:gravity="center"
-            android:text=""
-            android:textColor="#fff" />
 
     </LinearLayout>
 
@@ -121,7 +121,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginStart="15dp"
-            android:src="@drawable/member" />
+            android:src="@drawable/membership" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -185,10 +185,10 @@
         android:padding="10dp">
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginStart="15dp"
-            android:src="@drawable/ic_baseline_account_balance_24" />
+            android:src="@drawable/withdraw" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -222,10 +222,10 @@
         android:padding="10dp">
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginStart="15dp"
-            android:src="@drawable/bookings" />
+            android:src="@drawable/my_bookings" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -260,8 +260,8 @@
 
         <ImageView
             android:id="@+id/wallet"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="27dp"
+            android:layout_height="26dp"
             android:layout_marginStart="15dp"
             android:src="@drawable/wallet" />
 
@@ -322,7 +322,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_marginStart="15dp"
-            android:src="@drawable/ic_baseline_account_balance_24" />
+            android:src="@drawable/bank_account" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -360,7 +360,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/gradientEnd"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -375,9 +374,9 @@
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="35dp"
+                android:layout_height="30dp"
                 android:layout_gravity="center"
-                android:padding="6dp"
+                android:padding="2dp"
                 android:src="@drawable/ic_baseline_edit_24" />
 
             <TextView
@@ -386,7 +385,9 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="3dp"
                 android:text="Edit Profile"
-                android:textColor="#fff" />
+                android:textStyle="bold"
+                android:textSize="14sp"
+                android:textColor="@color/gradientStart" />
         </LinearLayout>
 
         <LinearLayout
@@ -399,9 +400,9 @@
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="35dp"
+                android:layout_height="30dp"
                 android:layout_gravity="center"
-                android:padding="6dp"
+                android:padding="2dp"
                 android:src="@drawable/ic_baseline_power_settings_new_24" />
 
             <TextView
@@ -409,7 +410,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Logout"
-                android:textColor="#fff" />
+                android:textStyle="bold"
+                android:textSize="14sp"
+                android:textColor="@color/gradientStart" />
         </LinearLayout>
     </LinearLayout>
 
