--- a/app/src/main/res/layout/activity_available_buses.xml
+++ b/app/src/main/res/layout/activity_available_buses.xml
@@ -66,7 +66,21 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/re1"
         android:orientation="horizontal"
-        android:padding="5dp">
+        android:padding="5dp"
+        >
+
+
+        <TextView
+            android:id="@+id/sort"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:drawablePadding="5dp"
+            android:gravity="start"
+            android:padding="5dp"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/filter"
@@ -83,20 +97,6 @@
             android:textSize="16sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/sort"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_bg"
-            android:drawableStart="@drawable/sort"
-            android:drawablePadding="5dp"
-            android:gravity="start"
-            android:padding="5dp"
-            android:text="Sort"
-            android:textSize="16sp"
-            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/clearFilter"
@@ -129,7 +129,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:background="#6D2AFAE7"
+            android:background="@color/cardBG"
             android:paddingStart="8dp"
             android:paddingEnd="8dp">
 
