--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -8,36 +8,54 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/background_gradiant">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/background_gradiant" />
-
-        <TextView
-            android:id="@+id/icon1"
-            android:layout_width="wrap_content"
+            android:src="@drawable/pattern" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="80dp"
-            android:scaleType="fitCenter"
-            android:text="DilPay"
-            android:textColor="#fff"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            android:layout_margin="50dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="0dp"
+            app:cardBackgroundColor="#80DAC3AA"
+            >
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="2dp"
+                >
+                <ImageView
+                    android:id="@+id/icon1"
+                    android:layout_width="250dp"
+                    android:layout_height="140dp"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/logo"
+                    android:scaleType="centerCrop"
+                    android:text="DilPay"
+                    android:textColor="#000"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/icon1"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="30dp"
-            android:text="DilPay services Pvt Ltd"
-            android:textColor="#fff"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="130dp"-->
+<!--                    android:layout_centerHorizontal="true"-->
+<!--                    android:text="DilPay services Pvt Ltd"-->
+<!--                    android:textColor="#000"-->
+<!--                    android:textSize="20sp"-->
+<!--                    android:textStyle="bold" />-->
+            </RelativeLayout>
+
+
+        </androidx.cardview.widget.CardView>
+
+
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/card"
