--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -61,9 +61,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:bmb_buttonEnum="textOutsideCircle"
-                        app:bmb_buttonPlaceEnum="buttonPlace_sc_6_2"
+                        app:bmb_buttonPlaceEnum="buttonPlace_sc_6_3"
                         app:bmb_normalColor="#4F000000"
-                        app:bmb_piecePlaceEnum="piecePlace_dot_6_2"
+                        app:bmb_piecePlaceEnum="piecePlace_dot_6_1"
                         app:bmb_shadowEffect="false" />
 
                     <ImageView
@@ -138,7 +138,7 @@
 
                         <HorizontalScrollView
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="130dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -149,8 +149,9 @@
                                 <com.google.android.material.card.MaterialCardView
                                     android:id="@+id/card1"
                                     android:layout_width="wrap_content"
-                                    android:layout_height="100dp"
+                                    android:layout_height="match_parent"
                                     android:layout_marginStart="15dp"
+                                    android:layout_marginEnd="8dp"
                                     app:cardBackgroundColor="#FAA58B"
                                     app:cardCornerRadius="6dp"
                                     app:cardElevation="5dp">
@@ -158,13 +159,14 @@
                                     <LinearLayout
                                         android:layout_width="200dp"
                                         android:layout_height="wrap_content"
+                                        android:padding="5dp"
                                         android:orientation="vertical">
 
                                         <TextView
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:layout_gravity="center"
-                                            android:layout_marginTop="20dp"
+                                            android:layout_marginTop="10dp"
                                             android:text="100% Secure Payments"
                                             android:textColor="#000"
                                             android:textStyle="bold" />
@@ -180,9 +182,10 @@
                                 <com.google.android.material.card.MaterialCardView
                                     android:id="@+id/card3"
                                     android:layout_width="wrap_content"
-                                    android:layout_height="100dp"
+                                    android:layout_height="match_parent"
                                     android:layout_marginStart="8dp"
                                     android:layout_marginEnd="8dp"
+
                                     app:cardBackgroundColor="#7CC8EA"
                                     app:cardCornerRadius="6dp"
                                     app:cardElevation="5dp">
@@ -190,13 +193,14 @@
                                     <LinearLayout
                                         android:layout_width="200dp"
                                         android:layout_height="wrap_content"
+                                        android:padding="5dp"
                                         android:orientation="vertical">
 
                                         <TextView
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:layout_gravity="center"
-                                            android:layout_marginTop="20dp"
+                                            android:layout_marginTop="10dp"
                                             android:text="Trust Pay"
                                             android:textColor="#000"
                                             android:textStyle="bold" />
@@ -212,8 +216,9 @@
                                 <com.google.android.material.card.MaterialCardView
                                     android:id="@+id/card4"
                                     android:layout_width="wrap_content"
-                                    android:layout_height="100dp"
+                                    android:layout_height="match_parent"
                                     android:layout_marginEnd="8dp"
+
                                     app:cardBackgroundColor="#E6D857"
                                     app:cardCornerRadius="6dp"
                                     app:cardElevation="5dp">
@@ -221,13 +226,14 @@
                                     <LinearLayout
                                         android:layout_width="200dp"
                                         android:layout_height="wrap_content"
+                                        android:padding="5dp"
                                         android:orientation="vertical">
 
                                         <TextView
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:layout_gravity="center"
-                                            android:layout_marginTop="20dp"
+                                            android:layout_marginTop="10dp"
                                             android:text="Refer &amp; Earn"
                                             android:textColor="#000"
                                             android:textStyle="bold" />
@@ -243,8 +249,9 @@
                                 <com.google.android.material.card.MaterialCardView
                                     android:id="@+id/card5"
                                     android:layout_width="wrap_content"
-                                    android:layout_height="100dp"
-                                    android:layout_marginEnd="15dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginEnd="18dp"
+
                                     app:cardBackgroundColor="#EC5F32"
                                     app:cardCornerRadius="6dp"
                                     app:cardElevation="5dp">
@@ -252,13 +259,14 @@
                                     <LinearLayout
                                         android:layout_width="200dp"
                                         android:layout_height="wrap_content"
+                                        android:padding="5dp"
                                         android:orientation="vertical">
 
                                         <TextView
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:layout_gravity="center"
-                                            android:layout_marginTop="20dp"
+                                            android:layout_marginTop="10dp"
                                             android:text="24*7 Support"
                                             android:textColor="#000"
                                             android:textStyle="bold" />
