--- a/app/src/main/res/layout/for_notifications_recyclerview.xml
+++ b/app/src/main/res/layout/for_notifications_recyclerview.xml
@@ -14,7 +14,7 @@
         android:id="@+id/re1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/cardBG"
+        android:background="#1681237C"
         android:padding="10dp">
 
         <TextView
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:text="Title"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
