--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,9 @@
     <color name="white">#FAFAFA</color>
     <color name="gray">#9C9B9B</color>
     <color name="error">#B00020</color>
-    <color name="gradientStart">#00a398</color>
-    <color name="gradientEnd">#007A72</color>
+    <color name="gradientStart">#822659</color>
+    <color name="gradientEnd">#a82069</color>
     <color name="textColor">#0071cc</color>
     <color name="progressBGColor">#BA000000</color>
-    <color name="cardBG">#6D2AFAE7</color>
+    <color name="cardBG">#66B34180</color>
 </resources>
