--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -138,13 +138,14 @@
 
                         <HorizontalScrollView
                             android:layout_width="match_parent"
-                            android:layout_height="130dp">
+                            android:layout_height="80dp"
+                            android:layout_marginBottom="10dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="match_parent"
                                 android:orientation="horizontal"
-                                android:paddingBottom="8dp">
+                                >
 
                                 <com.google.android.material.card.MaterialCardView
                                     android:id="@+id/card1"
@@ -157,9 +158,9 @@
                                     app:cardElevation="5dp">
 
                                     <LinearLayout
-                                        android:layout_width="200dp"
+                                        android:layout_width="230dp"
                                         android:layout_height="wrap_content"
-                                        android:padding="5dp"
+                                        android:padding="2dp"
                                         android:orientation="vertical">
 
                                         <TextView
