--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -10,36 +10,53 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#0DFFFFFF">
+        >
 
-        <!--        <ImageView-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="match_parent"-->
-        <!--            android:scaleType="centerCrop"-->
-        <!--            android:src="" />-->
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/pattern" />
 
-        <TextView
-            android:id="@+id/icon1"
-            android:layout_width="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="80dp"
-            android:scaleType="fitCenter"
-            android:text="DilPay"
-            android:textColor="#fff"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            android:layout_margin="50dp"
+            app:cardCornerRadius="10dp"
+            android:layout_above="@id/card"
+            app:cardElevation="0dp"
+            app:cardBackgroundColor="#57DFDADC"
+            >
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="2dp"
+                >
+                <ImageView
+                    android:id="@+id/icon1"
+                    android:layout_width="300dp"
+                    android:layout_height="240dp"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/logo"
+                    android:scaleType="centerCrop"
+                    android:text="DilPay"
+                    android:textColor="#000"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/icon1"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="30dp"
-            android:text="DilPay services Pvt Ltd"
-            android:textColor="#fff"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+                <!--                <TextView-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginTop="130dp"-->
+                <!--                    android:layout_centerHorizontal="true"-->
+                <!--                    android:text="DilPay services Pvt Ltd"-->
+                <!--                    android:textColor="#000"-->
+                <!--                    android:textSize="20sp"-->
+                <!--                    android:textStyle="bold" />-->
+            </RelativeLayout>
+
+
+        </androidx.cardview.widget.CardView>
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/card"
@@ -49,7 +66,9 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_marginBottom="-8dp"
+            android:layout_marginTop="20dp"
             android:padding="8dp"
+            android:elevation="15dp"
             app:cardCornerRadius="8dp">
 
 
@@ -174,6 +193,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/progressBGColor"
+        android:elevation="17dp"
         android:visibility="gone">
 
         <ProgressBar
