--- a/app/src/main/res/layout/for_transactions_list.xml
+++ b/app/src/main/res/layout/for_transactions_list.xml
@@ -14,7 +14,7 @@
         android:id="@+id/re3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#1681237C"
+        android:background="@color/cardBG"
         android:padding="10dp">
 
         <TextView
