--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/background_gradiant"
     tools:context=".Splash_screen">
 
-    <TextView
+    <ImageView
         android:id="@+id/icon1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,6 +15,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
         android:scaleType="fitCenter"
+        android:src="@drawable/logo"
         android:text="DilPay"
         android:textColor="#fff"
         android:textSize="30sp"
@@ -23,11 +24,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/icon1"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:scaleType="fitCenter"
-        android:text="DilPay services Pvt Ltd"
+        android:text="Dilpay services Pvt Ltd"
         android:textColor="#fff"
+        android:layout_margin="20dp"
         android:textSize="20sp"
         android:textStyle="bold" />
 
