--- a/app/src/main/res/layout/activity_withdraw_amount.xml
+++ b/app/src/main/res/layout/activity_withdraw_amount.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WithdrawAmount">
+    tools:context=".bank.WithdrawAmount">
 
     <RelativeLayout
         android:id="@+id/header"
@@ -42,8 +42,17 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        android:hint="Amount to be withdraw"
+        android:hint="withdraw amount"
         app:boxStrokeColor="@color/gradientStart">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Minimum anount withdraw : Rs/-100"
+            android:textSize="12sp"
+            android:textColor="@color/error"
+            android:padding="8dp"
+            />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/amountWithDraw"
